--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,7 +1,24 @@
-
-.normal {
+*, ul, li, ol, li {
+  list-style: none;
+  text-decoration: none;
+  margin: 0px;
+  padding: 0px;
 }
 
-.title {
-  background: rgb(121, 242, 157);
+.row {
+  margin: 0px 100px;
 }
+
+.carousel {
+  margin: auto;
+  width: 740px;
+  height: 500px;
+}
+
+.fans {
+}
+
+//.fans h3 {
+//  font-weight: bold;
+//  font-size: 1.5em;
+//}
