--- a/src/components/image/style/link.less
+++ b/src/components/image/style/link.less
@@ -1,31 +1,33 @@
 
-.link {
+.a {
   text-decoration: none;
   display: inline-block;
 }
 
+.link {
+  .a();
+}
+
 .unlink {
-  text-decoration: none;
-  display: inline-block;
+  .a();
 }
 
 .unlink:link {
   .unlink();
   cursor: default;
 }
-.unlink:hover{
+
+.unlink:hover {
   .unlink();
   cursor: default;
 }
+
 .unlink:active {
   .unlink();
   cursor: default;
 }
+
 .unlink:visited {
   .unlink();
   cursor: default;
-}
-.divWrapper>div {
-  height: 100%;
-  width: 100%;
 }
