--- a/src/components/image/style/LinkImage.less
+++ b/src/components/image/style/LinkImage.less
@@ -1,15 +1,20 @@
 
-.a {
+a {
   text-decoration: none;
   display: inline-block;
+  position: relative;
 }
 
 .link {
-  .a();
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
 }
 
 .unlink {
-  .a();
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
 }
 
 .unlink:link {
