--- a/src/components/image/style/cover.less
+++ b/src/components/image/style/cover.less
@@ -1,20 +1,23 @@
 
 .size-small {
-  width: 20px;
-  height: 60px;
+  width: 50px;
+  //height: 60px;
+  //overflow: hidden;
 }
 
 .size-normal {
   width: 50px;
-  height: 150px;
+  //height: 150px;
+  //overflow: hidden;
 }
 
 .size-large {
   width: 100px;
-  height: 300px;
+  //height: 300px;
+  //overflow: hidden;
 }
 
 .size-default {
-  width: auto;
-  height: auto;
+  //width: auto;
+  //height: auto;
 }
